todo implemented with firebase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" [routerLink]="['home']">Home</a>
-        <a class="nav-link" [routerLink]="['todo', 'list']" >Todo App</a>
+        <a class="nav-link" [routerLink]="['todo', 'list-simple']" >Todo App</a>
+        <a class="nav-link" [routerLink]="['todo', 'list-firebase']" >Todo App Firebase</a>
         <!-- <a class="nav-link" href="#">Pricing</a>
         <a class="nav-link disabled">Disabled</a> -->
       </div>
