--- a/src/app/components/todo-list/todo-list-simple/todo-list-simple.component.html
+++ b/src/app/components/todo-list/todo-list-simple/todo-list-simple.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-center">Todo List</h1>
+<h1 class="text-center">To Do List</h1>
 <br>
 <div class="container">
     <div class="row justify-content-md-center">
