todo mongo implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
         <a class="nav-link active" aria-current="page" [routerLink]="['home']">Home</a>
         <a class="nav-link" [routerLink]="['todo', 'list-simple']" >Todo App</a>
         <a class="nav-link" [routerLink]="['todo', 'list-firebase']" >Todo App Firebase</a>
+        <a class="nav-link" [routerLink]="['todo', 'list-mongo']" >Todo App Mongo</a>
         <!-- <a class="nav-link" href="#">Pricing</a>
         <a class="nav-link disabled">Disabled</a> -->
       </div>
